# transparent

./: Cargo.toml  mkfs.sh
.cargo/: config  config.toml
.github/workflows/: test.yml
src/: addr.rs  align.rs  allocator.rs  assembly.rs  block.rs  console.rs  device.rs  fat32.rs  log.rs  main.rs  memory.rs  panic.rs  plic.rs  qemu.rs  testing.rs  timer.rs  trap.rs  uart.rs  virtio.rs  virtio_impl.rs
src/asm/: boot.s
src/lds/: qemu-virt.ld
user/: .gitignore  build.ninja  busy.c  busy.elf  userspace.ld
