[package]
name = "transparent"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = "0.8.0"
sbi = "0.2.0"
spin = "0.9.3"
#virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "f30d426" }
virtio-drivers = { path = "vendor/virtio-drivers" }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
linked_list_allocator = "0.9.1"
log = "0.4.17"
elf = { version = "0.7.2", default-features = false }

[features]
